# netscope

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: dev-build.yml  release.yml
src/: cli.rs  main.rs  output.rs  report.rs  util.rs
src/network/: client.rs  dns.rs  egress.rs  geo.rs  mod.rs
src/probe/: methods.rs  mod.rs  target.rs  types.rs
src/speed/: backends.rs  download.rs  mod.rs  ping.rs  runner.rs  upload.rs
src/tui/: mod.rs  render.rs  state.rs
