[package]
name = "netscope"
version = "1.0.1"
edition = "2024"

[dependencies]
ratatui   = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "http2", "charset", "json", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }

[profile.release]
opt-level     = "z"   # optimize for size
lto           = true  # link-time optimization (cross-crate inlining + dead code removal)
codegen-units = 1     # single codegen unit → better LTO
panic         = "abort"
strip         = true  # strip symbols automatically
